--- a/Dunia Games/topup.css
+++ b/Dunia Games/topup.css
@@ -5,7 +5,7 @@
 	 }
 .wrapper p{background-color:  
 	background-position: center;
-	color: white;
+	color: yellow;
 	float: left;
 	margin: 10px;
 	padding: 10px;
